Changed the html a bit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Tanish Agarwal</title>
+</head>
+<body>
+<h1>NAMASTE DUNIYA!</h1>
+</body>
+</html>
