--- a/practice/index.html
+++ b/practice/index.html
@@ -9,7 +9,7 @@
 	<input type="text" id="name">
 	<button onclick="sayhello();">OKIE</button>
 
-	<div id="content"><h2></h2></div>
+	<div id="content"></div>
 
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
